wip: Make it easier to compare old vs new

--- a/index.html
+++ b/index.html
@@ -10,34 +10,30 @@
   </head>
   <body>
     <div class="grid">
-      <div class="old">
-        <h1>Current Typography</h1>
-        <p class="megaphone">Sample megaphone text here</p>
-        <p class="shout">Sample shout text here</p>
-        <p class="louder">Sample louder text here</p>
-        <p class="loud">Sample loud text here</p>
-        <p class="loud-bold">Sample loud-bold text here</p>
-        <p class="speak-up">Sample speak-up text here</p>
-        <p class="speak">Sample speak text here</p>
-        <p class="murmur">Sample murmur text here</p>
-        <p class="murmur-bold">Sample murmur-bold text here</p>
-        <p class="whisper-loud">Sample whisper-loud text here</p>
-        <p class="whisper">Sample whisper text here</p>
-      </div>
-      <div class="new">
-        <h1>Updated Typography</h1>
-        <p class="megaphone">Sample megaphone text here</p>
-        <p class="shout">Sample shout text here</p>
-        <p class="louder">Sample louder text here</p>
-        <p class="loud">Sample loud text here</p>
-        <p class="loud-bold">Sample loud-bold text here</p>
-        <p class="speak-up">Sample speak-up text here</p>
-        <p class="speak">Sample speak text here</p>
-        <p class="murmur">Sample murmur text here</p>
-        <p class="murmur-bold">Sample murmur-bold text here</p>
-        <p class="whisper-loud">Sample whisper-loud text here</p>
-        <p class="whisper">Sample whisper text here</p>
-      </div>
+      <h1>Current Typography</h1>
+      <h1>Updated Typography</h1>
+      <p class="old-megaphone">Sample megaphone text here</p>
+      <p class="new-megaphone">Sample megaphone text here</p>
+      <p class="old-shout">Sample shout text here</p>
+      <p class="new-shout">Sample shout text here</p>
+      <p class="old-louder">Sample louder text here</p>
+      <p class="new-louder">Sample louder text here</p>
+      <p class="old-loud">Sample loud text here</p>
+      <p class="new-loud">Sample loud text here</p>
+      <p class="old-loud-bold">Sample loud-bold text here</p>
+      <p class="new-loud-bold">Sample loud-bold text here</p>
+      <p class="old-speak-up">Sample speak-up text here</p>
+      <p class="new-speak-up">Sample speak-up text here</p>
+      <p class="old-speak">Sample speak text here</p>
+      <p class="new-speak">Sample speak text here</p>
+      <p class="old-murmur">Sample murmur text here</p>
+      <p class="new-murmur">Sample murmur text here</p>
+      <p class="old-murmur-bold">Sample murmur-bold text here</p>
+      <p class="new-murmur-bold">Sample murmur-bold text here</p>
+      <p class="old-whisper-loud">Sample whisper-loud text here</p>
+      <p class="new-whisper-loud">Sample whisper-loud text here</p>
+      <p class="old-whisper">Sample whisper text here</p>
+      <p class="new-whisper">Sample whisper text here</p>
     </div>
     <br><br><br>
     <p>Content can be presented without loss of information or functionality, and without requiring scrolling in two dimensions for up to 400% zoom</p>
